k8s/solution1-GatewayAPI-pod-scaling-GXLB/store-v2.service-deployment.yaml
# Service 'store-v2' has 9x capacity than store-v1. We simulate it with 9x pods ands 9x capacity (max-rate-per-endpoint)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-v2
spec:
  replicas: 4
  selector:
    matchLabels:
      app: store
      version: v2
  template:
    metadata:
      labels:
        app: store
        version: v2
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.2.1
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-v2
  annotations:
    networking.gke.io/max-rate-per-endpoint: "90"
    cloud.google.com/neg: '{"exposed_ports": {"8080":{"name": "store-v2-neg"}}}'
spec:
  selector:
    app: store
    version: v2
  ports:
  - port: 8080
    targetPort: 8080
